--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,40 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Theater im Parkett</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,400i|Playfair+Display:900i" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
+    <nav class="c-navigation">
+        <ul class="c-navigation__list">
+            <li class="c-navigation__item">
+                <a class="c-navigation__link" href="index.html">Start</a> 
+
+            </li>
+            <li class="c-navigation__item">
+                <a class="c-navigation__link" href="festival.html">Festival</a> 
+
+            </li>
+            <li class="c-navigation__item">
+
+                <span class="c-navigation__link">Spielplan</span> 
+            </li>
+            <li class="c-navigation__item">
+
+                <span class="c-navigation__link">Tickets</span> 
+            </li>
+            <li class="c-navigation__item">
+
+                <span class="c-navigation__link">Über das Theater</span> 
+            </li>
+            <li class="c-navigation__item">
+
+                <span class="c-navigation__link">Anfahrt</span> 
+            </li>
+
+        </ul>
+    </nav>
 
     <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;">
         <defs>
@@ -22,7 +52,7 @@
     <!-- Quelle: https://github.com/juliangarnier/anime -->
     <script src="assets/js/anime.min.js"></script>
 
-    <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/app.bundle.js"></script>
 </body>
 
 </html>
