--- a/public/festival.html
+++ b/public/festival.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
+        
         <div class="c-wrap">
             <header class="c-header">
                 <div class="c-header__content">
@@ -74,6 +75,9 @@
 
         <!-- Quelle: https://github.com/juliangarnier/anime -->
         <script src="assets/js/anime.min.js"></script>
+
+        <!-- Quelle: https://github.com/kenwheeler/cash -->
+        <script src="assets/js/cash.min.js"></script>
 
         <script src="assets/js/app.bundle.js"></script>
     </body>
