--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,35 @@
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
+        
+        <div class="c-animation js-animation">
+    <div class="c-animation__frame" id="frame-1">
+        <svg class="js-content" style="opacity: 0" width="600" height="400" viewBox="0 0 600 400">
+            <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 74.7324 353.7676)" style="fill:#D4A169; font-family:'Playfair Display'; font-size:121px;">Parkett!</text>
+            <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 46.3701 180.3584)" style="fill:#D4A169; font-family:'Playfair Display'; font-size:87px;">Willkommen</text>
+            <text transform="matrix(1 0 0 1 278.7505 193.2178)" style="fill:#D4A169; font-size:40px;">im</text>
+            <line style="fill:none;stroke:#D4A169;stroke-width:4;stroke-miterlimit:10;" x1="248" y1="190" x2="83" y2="220"/>
+            <line style="fill:none;stroke:#D4A169;stroke-width:4;stroke-miterlimit:10;" x1="522" y1="142" x2="347" y2="173"/>
+        </svg>
+    </div>
+    <div class="c-animation__frame" id="frame-2" style="opacity: 0">
+        <svg class="js-content" width="831px" height="326px" viewBox="0 0 831 326">
+            <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 257.666 294.1543)" style="fill:#FFF; font-family:'Playfair Display'; font-size:86px;">Parkett!</text>
+            <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 32.2832 208.1885)" style="fill:#FFF; font-family:'Playfair Display'; font-size:78px;">Pausenlos Programm</text>
+            <text transform="matrix(1 0 0 1 402.1255 181.208)" style="fill:#FFF; font-family:'Lato-Regular'; font-size:28px;">im</text>
+            <line style="fill:none;stroke:#FFF;stroke-width:4;stroke-miterlimit:10;" x1="380" y1="182" x2="266" y2="204"/>
+            <line style="fill:none;stroke:#FFF;stroke-width:4;stroke-miterlimit:10;" x1="574" y1="147" x2="449.9" y2="170"/>
+        </svg>
+    </div>
+    <div class="c-animation__border">
+        <div class="progress js-progress"></div>
+        <span class="top-left"></span>
+        <span class="top-right"></span>
+        <span class="bottom-left"></span>
+        <span class="bottom-right"></span>
+    </div>
+</div>
+        
         <div class="c-wrap">
             <header class="c-header">
                 <div class="c-header__content">
@@ -94,6 +123,9 @@
 
         <!-- Quelle: https://github.com/juliangarnier/anime -->
         <script src="assets/js/anime.min.js"></script>
+
+        <!-- Quelle: https://github.com/kenwheeler/cash -->
+        <script src="assets/js/cash.min.js"></script>
 
         <script src="assets/js/app.bundle.js"></script>
     </body>
