--- a/public/festival.html
+++ b/public/festival.html
@@ -185,6 +185,7 @@
     </ul>
 </div>
 
+            <div style="height:8em"></div>
         </div>
         <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;">
     <defs>
