--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
         <div class="c-animation js-animation">
     <div class="c-animation__frame" id="frame-1">
         <svg class="js-content" style="opacity: 1" width="600" height="400" viewBox="0 0 600 400">
-            <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 74.7324 353.7676)" style="fill:#D4A169; font-family:'Playfair Display'; font-size:121px;">Parkett!</text>
             <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 46.3701 180.3584)" style="fill:#D4A169; font-family:'Playfair Display'; font-size:87px;">Willkommen</text>
             <text transform="matrix(1 0 0 1 278.7505 193.2178)" style="fill:#D4A169; font-size:40px;">im</text>
+            <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 74.7324 353.7676)" style="fill:#D4A169; font-family:'Playfair Display'; font-size:121px;">Parkett!</text>
             <line style="fill:none;stroke:#D4A169;stroke-width:4;stroke-miterlimit:10;" x1="248" y1="190" x2="83" y2="220"/>
-            <line style="fill:none;stroke:#D4A169;stroke-width:4;stroke-miterlimit:10;" x1="522" y1="142" x2="347" y2="173"/>
+            <line style="fill:none;stroke:#D4A169;stroke-width:4;stroke-miterlimit:10;" x1="347" y1="173" x2="522" y2="142"/>
         </svg>
     </div>
     <div class="c-animation__frame" id="frame-2" style="opacity: 0">
@@ -98,19 +98,46 @@
             <p class="o-subhead">Liebe</p>
             <h2 class="c-intro__title">Theaterfreunde</h2>
             <p>
-                seit mehr als 50 Jahren bieten wir auf unserer Amateurbühne ein
-                Programm für Groß und Klein. Wir spielen Klassiker – von
-                Shakespeares „Lustigen Weibern von Windsor“ bis zu Dürrenmatts
-                „Besuch der alten Dame“. Wir setzen uns aber auch mit
-                Gegenwartsstücken ganz junger Autoren auseinander. Und wir
-                bieten immer mehrere Stücke für Kinder an – besonders in der
-                Vorweihnachtszeit. Schauen Sie sich einfach auf unserem
-                Spielplan um!
+                seit mehr als 50 Jahren bieten wir auf unserer Amateurbühne ein Programm für
+                Groß und Klein. Wir spielen Klassiker – von Shakespeares „Lustigen Weibern von
+                Windsor“ bis zu Dürrenmatts „Besuch der alten Dame“. Wir setzen uns aber auch
+                mit Gegenwartsstücken ganz junger Autoren auseinander. Und wir bieten immer
+                mehrere Stücke für Kinder an – besonders in der Vorweihnachtszeit. Schauen Sie
+                sich einfach auf unserem Spielplan um!
             </p>
         </div>
     </article>
 </div>
 
+<div class="c-highlight">
+    <h2 class="c-highlight__title">Highlight:</h2>
+    <div class="c-highlight__date">
+        <svg>
+		    <mask id='m' fill='#fff'>
+    			<rect width="100%" height="100%" fill="#fff" />
+                <circle id='c' r='16' fill='#000' cx="100%" cy="50%" />
+                <circle id='c' r='16' fill='#000' cy="50%" />
+    		</mask>
+            <rect width="100%" height="100%" fill="#d4a169" mask="url(#m)" />
+    	</svg>
+        <div class="c-highlight__day text-hl">13</div>
+        <div class="c-highlight__month">OKT</div>
+    </div>
+    <div class="c-highlight__text">
+        <p>
+            In diesem Jahr sind wir beim traditionellen Stuttgarter Festival Theaterfieber dabei.
+            Wir freuen uns sehr, Sie am Samstag, 13. Oktober 2018 von 19 bis 24 Uhr in unseren
+            heiligen Hallen in der Hohen Straße begrüßen zu dürfen. Freuen Sie sich auf sechs
+            angespielte Stücke, die Sie hoffentlich animieren, wieder zu kommen und die eine oder
+            andere Aufführung von Anfang bis Ende anzusehen.
+        </p>
+        <p>
+            <a class="o-btn" href="festival.html">mehr erfahren</a>
+        </p>
+    </div>
+</div>
+
+            <div style="height:8em"></div>
         </div>
         <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;">
     <defs>
