--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,13 @@
         </svg>
     </div>
     <div class="c-animation__frame" id="frame-3" style="opacity: 0">
-
+        <img class="c-animation__bg js-img" src="assets/img/animation/frame-3.jpg">
+        <div class="c-animation__content js-content">
+            <p class="text-hl">
+                Treffpunkt Parkett – für Groß und Klein<br>
+                Fiebern Sie mit uns!
+            </p>
+        </div>
     </div>
     <div class="c-animation__border">
         <div class="progress js-progress"></div>
@@ -153,11 +159,10 @@
     </defs>
 </svg>
 
-        <!-- Quelle: https://github.com/juliangarnier/anime -->
-        <script src="assets/js/anime.min.js"></script>
-
-        <!-- Quelle: https://github.com/kenwheeler/cash -->
         <script src="assets/js/cash.min.js"></script>
+        <script src="assets/js/TweenLite.min.js"></script>
+        <script src="assets/js/CSSPlugin.min.js"></script>
+        <script src="assets/js/TimelineLite.min.js"></script>
 
         <script src="assets/js/app.bundle.js"></script>
     </body>
