--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,17 @@
                                 </li>
                             
                         </ul>
+                        <button class="c-navigation__close  js-navClose">
+                            <svg width="20" height="20" viewBox="0 0 20 20">
+                                <path fill="currentColor" d="M10 8.586l-7.071-7.071-1.414 1.414 7.071 7.071-7.071 7.071 1.414 1.414 7.071-7.071 7.071 7.071 1.414-1.414-7.071-7.071 7.071-7.071-1.414-1.414-7.071 7.071z"></path>
+                            </svg>
+                        </button>
                     </nav>
+                    <button class="c-header__menu  js-navToggle">
+                        <svg width="20" height="20" viewBox="0 0 20 20">
+                            <path fill="currentColor" d="M0 3h20v2h-20v-2zM0 9h20v2h-20v-2zM0 15h20v2h-20v-2z"></path>
+                        </svg>
+                    </button>
                 </div>
             </header>
 
