--- a/public/index.html
+++ b/public/index.html
@@ -189,6 +189,7 @@
         <script src="assets/js/TweenLite.min.js"></script>
         <script src="assets/js/CSSPlugin.min.js"></script>
         <script src="assets/js/TimelineLite.min.js"></script>
+        <script src="assets/js/baguetteBox.min.js"></script>
 
         <script src="assets/js/app.bundle.js"></script>
     </body>
