--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
+    <!-- Animation Begin -->
     <div class="c-animation js-animation">
       <div class="c-animation__frame" id="frame-1">
         <img class="c-animation__bg js-img" src="assets/img/animation/frame-1.jpg">
@@ -37,6 +38,7 @@
         <span class="bottom-right"></span>
       </div>
     </div>
+    <!-- Animation Ende -->
     <div class="c-wrap">
       <header class="c-header">
         <div class="c-header__content">
