--- a/public/index.html
+++ b/public/index.html
@@ -152,7 +152,7 @@
     </article>
 </div>
 
-<div class="c-highlight">
+<div class="c-highlight  u-gapLargeBottom">
     <h2 class="c-highlight__title">Highlight:</h2>
     <div class="c-highlight__date">
         <svg>
@@ -180,7 +180,11 @@
     </div>
 </div>
 
-            <div style="height:8em"></div>
+            <div class="c-footer">
+                <div class="c-footer__inner">
+                    &copy; 2018 &ndash; Theater im Parkett
+                </div>
+            </div>
         </div>
 
         <!-- Quelle: https://github.com/kenwheeler/cash -->
