--- a/public/festival.html
+++ b/public/festival.html
@@ -219,7 +219,11 @@
     </ul>
 </div>
 
-            <div style="height:8em"></div>
+            <div class="c-footer">
+                <div class="c-footer__inner">
+                    &copy; 2018 &ndash; Theater im Parkett
+                </div>
+            </div>
         </div>
 
         <!-- Quelle: https://github.com/kenwheeler/cash -->
